<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1000dp"
    android:layout_height="676dp"
    tools:context=".pages.CreditCardFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtCreditMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditMessage"
        android:gravity="center_horizontal"
        android:textSize="44sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceMessage"
        android:textSize="36sp"
        android:gravity="center|left"
        android:layout_marginStart="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/txtCreditMessage"
        app:layout_constraintLeft_toLeftOf="@+id/txtCreditMessage"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtInputAmt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="40sp"
        android:text="0"
        android:gravity="right|center"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/txtPriceTitle"
        app:layout_constraintTop_toTopOf="@id/txtPriceTitle"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payUnitMessage"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/txtInputAmt"
        app:layout_constraintBottom_toBottomOf="@id/txtInputAmt" />

    <View
        android:id="@+id/line"
        android:layout_width="400dp"
        android:layout_height="1.5dp"
        android:layout_centerInParent="true"
        android:background="#224E98"
        android:layout_marginStart="-10dp"
        app:layout_constraintLeft_toLeftOf="@id/txtPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/txtInputAmt" />

    <TextView
        android:id="@+id/chargeUnit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/chargeUnit"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/txtPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/txtInputAmt" />

    <TextView
        android:id="@+id/unitPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:gravity="right|center"
        app:layout_constraintLeft_toRightOf="@id/chargeUnit"
        app:layout_constraintTop_toTopOf="@id/chargeUnit"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payUnitMessage"
        android:textColor="#999999"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        app:layout_constraintRight_toRightOf="@id/line"
        app:layout_constraintBottom_toBottomOf="@id/unitPrice" />

    <Button
        android:id="@+id/btn500"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:text="@string/btn_500"
        app:backgroundTint="@null"
        android:textSize="24sp"
        android:layout_marginTop="310dp"
        android:layout_marginStart="250dp"
        android:tag="500"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1000"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:text="@string/btn_1000"
        app:backgroundTint="@null"
        android:textSize="24sp"
        android:tag="1000"
        android:background="@drawable/selector_default_btn"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toRightOf="@id/btn500"
        app:layout_constraintTop_toTopOf="@id/btn500" />

    <Button
        android:id="@+id/btn5000"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:text="@string/btn_5000"
        app:backgroundTint="@null"
        android:textSize="24sp"
        android:tag="5000"
        android:background="@drawable/selector_default_btn"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toRightOf="@id/btn1000"
        app:layout_constraintTop_toTopOf="@id/btn1000" />

    <Button
        android:id="@+id/btn10000"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:text="@string/btn_10000"
        app:backgroundTint="@null"
        android:textSize="24sp"
        android:tag="10000"
        android:background="@drawable/selector_default_btn"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/btn500"
        app:layout_constraintTop_toBottomOf="@id/btn500" />

    <Button
        android:id="@+id/btn20000"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:text="@string/btn_20000"
        app:backgroundTint="@null"
        android:textSize="24sp"
        android:tag="20000"
        android:background="@drawable/selector_default_btn"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toRightOf="@id/btn10000"
        app:layout_constraintTop_toTopOf="@id/btn10000" />

    <Button
        android:id="@+id/btn50000"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:text="@string/btn_Full"
        app:backgroundTint="@null"
        android:textSize="24sp"
        android:tag="50000"
        android:background="@drawable/selector_default_btn"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toRightOf="@id/btn20000"
        app:layout_constraintTop_toTopOf="@id/btn20000" />


    <Button
        android:id="@+id/btnClear"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:text="@string/btn_clear"
        app:backgroundTint="@null"
        android:textSize="32sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toLeftOf="@id/btn10000"
        app:layout_constraintTop_toBottomOf="@id/btn10000" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:text="@string/btn_pay"
        app:backgroundTint="@null"
        android:textSize="32sp"
        android:layout_marginStart="20dp"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintRight_toRightOf="@id/btn50000"
        app:layout_constraintTop_toTopOf="@id/btnClear" />


</androidx.constraintlayout.widget.ConstraintLayout>