<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1024dp"
    android:layout_height="676dp"
    android:orientation="horizontal"
    tools:context=".pages.EnvironmentFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btnConfig"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/configButton"
        app:backgroundTint="@null"
        android:layout_marginTop="100dp"
        android:layout_marginStart="80dp"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWebSocket"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/webSocketButton"
        app:backgroundTint="@null"
        android:layout_marginStart="40dp"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toRightOf="@id/btnConfig"
        app:layout_constraintTop_toTopOf="@id/btnConfig" />

    <Button
        android:id="@+id/btnControl"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/controlButton"
        app:backgroundTint="@null"
        android:layout_marginStart="40dp"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toRightOf="@id/btnWebSocket"
        app:layout_constraintTop_toTopOf="@id/btnWebSocket" />

    <Button
        android:id="@+id/btnUi"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/uiButton"
        app:backgroundTint="@null"
        android:layout_marginTop="80dp"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toLeftOf="@id/btnConfig"
        app:layout_constraintTop_toBottomOf="@id/btnConfig" />

    <Button
        android:id="@+id/btnLoadTest"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/loadTest"
        app:backgroundTint="@null"
        android:layout_marginStart="40dp"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toRightOf="@id/btnUi"
        app:layout_constraintTop_toTopOf="@id/btnUi" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:text="@string/exitButton"
        app:backgroundTint="@null"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintLeft_toRightOf="@id/btnLoadTest"
        app:layout_constraintTop_toTopOf="@id/btnLoadTest" />

</androidx.constraintlayout.widget.ConstraintLayout>