<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1024dp"
    android:layout_height="676dp"
    android:orientation="horizontal"
    tools:context=".pages.ControlDebugFragment">

    <!-- TODO: Update blank fragment layout -->
    <RadioGroup
        android:id="@+id/rgSelectChannel"
        android:orientation="horizontal"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_secondary_variant"
            android:text="@string/channelSelect"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/channel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:checked="true"
            android:textColor="@color/design_default_color_secondary_variant"
            android:text="@string/channel1"
            android:tag="0" />

        <RadioButton
            android:id="@+id/channel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:checked="false"
            android:textColor="@color/design_default_color_secondary_variant"
            android:text="@string/channel2"
            android:visibility="invisible"
            android:tag="1" />
    </RadioGroup>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:text="@string/btnExit"
        android:textColor="#FF000000"
        app:backgroundTint="@null"
        android:textSize="19sp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/selector_default_btn"
        app:layout_constraintTop_toTopOf="@id/rgSelectChannel"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/imgRx"
        android:layout_width="512dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_rx_bar"
        app:layout_constraintTop_toBottomOf="@id/rgSelectChannel"
        app:layout_constraintLeft_toLeftOf="@id/rgSelectChannel"
        tools:ignore="ContentDescription" />

    <ListView
        android:id="@+id/listRx"
        android:layout_width="500dp"
        android:layout_height="540dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/imgRx"
        app:layout_constraintTop_toBottomOf="@id/imgRx" />

    <ImageView
        android:id="@+id/imgTx"
        android:layout_width="512dp"
        android:layout_height="50dp"
        android:background="@drawable/img_tx_bar"
        app:layout_constraintLeft_toRightOf="@id/imgRx"
        app:layout_constraintTop_toTopOf="@id/imgRx" />

    <ListView
        android:id="@+id/listTx"
        android:layout_width="500dp"
        android:layout_height="540dp"
        app:layout_constraintLeft_toLeftOf="@id/imgTx"
        app:layout_constraintTop_toBottomOf="@id/imgTx" />

</androidx.constraintlayout.widget.ConstraintLayout>